@@ -1,8 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.48 2005/01/18 06:57:40 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.49 2005/01/19 20:35:37 agaffney Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
+
+  19 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
+  Added "Portage snapshot URI" field to PortageTree.py
 
   17 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
   Added blurb about me being lazy to Welcome. Turned off pretend mode for
